[gd_scene load_steps=7 format=3 uid="uid://bxdcdi2qveb03"]

[ext_resource type="Script" path="res://Scenes/CanvasLayers/PlayerStatus/Scripts/player_status.gd" id="1_cmkwq"]
[ext_resource type="Texture2D" uid="uid://c415ayvnkkulp" path="res://Scenes/AlchemySpells/Nothing/Images/nothing_icon.png" id="2_7iwvb"]
[ext_resource type="Script" path="res://Scenes/CanvasLayers/PlayerStatus/Scripts/new_item.gd" id="3_2cve8"]
[ext_resource type="Texture2D" uid="uid://fbhlns2yyrd0" path="res://Scenes/CanvasLayers/AlchemyMenu/Images/leaf.png" id="3_h7ll0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eliyy"]
bg_color = Color(0.231373, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pm8f3"]
bg_color = Color(0, 0.630542, 0.37858, 1)

[node name="PlayerStatus" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_cmkwq")

[node name="Control" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 2

[node name="Health" type="Label" parent="Control/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Health"

[node name="HealthBar" type="ProgressBar" parent="Control/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/background = SubResource("StyleBoxFlat_eliyy")
theme_override_styles/fill = SubResource("StyleBoxFlat_pm8f3")
step = 1.0
value = 25.0
rounded = true

[node name="Control" type="Control" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 2

[node name="Gaunlet0" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="SpellIcon0" type="TextureRect" parent="Control/VBoxContainer/Gaunlet0"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_7iwvb")
expand_mode = 2
stretch_mode = 5

[node name="HBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer/Gaunlet0"]
layout_mode = 2

[node name="SpellName0" type="Label" parent="Control/VBoxContainer/Gaunlet0/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "INfo"

[node name="SpellProgress0" type="ProgressBar" parent="Control/VBoxContainer/Gaunlet0/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
step = 0.001
show_percentage = false

[node name="Gaunlet1" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="SpellIcon1" type="TextureRect" parent="Control/VBoxContainer/Gaunlet1"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_7iwvb")
expand_mode = 2
stretch_mode = 5

[node name="HBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer/Gaunlet1"]
layout_mode = 2

[node name="SpellName1" type="Label" parent="Control/VBoxContainer/Gaunlet1/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "INfo"

[node name="SpellProgress1" type="ProgressBar" parent="Control/VBoxContainer/Gaunlet1/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
step = 0.001
show_percentage = false

[node name="Gaunlet2" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="SpellIcon2" type="TextureRect" parent="Control/VBoxContainer/Gaunlet2"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_7iwvb")
expand_mode = 2
stretch_mode = 5

[node name="HBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer/Gaunlet2"]
layout_mode = 2

[node name="SpellName2" type="Label" parent="Control/VBoxContainer/Gaunlet2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Info"

[node name="SpellProgress2" type="ProgressBar" parent="Control/VBoxContainer/Gaunlet2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
step = 0.001
show_percentage = false

[node name="Gaunlet3" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="SpellIcon3" type="TextureRect" parent="Control/VBoxContainer/Gaunlet3"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_7iwvb")
expand_mode = 2
stretch_mode = 5

[node name="HBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer/Gaunlet3"]
layout_mode = 2

[node name="SpellName3" type="Label" parent="Control/VBoxContainer/Gaunlet3/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Info"

[node name="SpellProgress3" type="ProgressBar" parent="Control/VBoxContainer/Gaunlet3/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
step = 0.001
show_percentage = false

[node name="NewItem" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("3_2cve8")

[node name="NotificationTimer" type="Timer" parent="NewItem"]
unique_name_in_owner = true
wait_time = 3.0
one_shot = true

[node name="HBoxContainer" type="HBoxContainer" parent="NewItem"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.0
offset_top = -15.5
offset_right = 121.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2

[node name="NewItemIcon" type="TextureRect" parent="NewItem/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("3_h7ll0")
expand_mode = 3

[node name="NewItemText" type="Label" parent="NewItem/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "You found some leafs"

[connection signal="timeout" from="NewItem/NotificationTimer" to="NewItem" method="_on_notification_timer_timeout"]
